--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "dependencies": {
     "ftp-deploy": "^2.3.3",
     "gatsby": "^2.14.x",
+    "gatsby-plugin-google-analytics": "^2.2.2",
     "gatsby-plugin-manifest": "^2.2.0",
     "gatsby-plugin-postcss": "^2.1.0",
     "gatsby-plugin-purgecss": "^4.0.0",
