--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "gatsby": "^2.14.x",
     "gatsby-plugin-google-analytics": "^2.2.2",
     "gatsby-plugin-manifest": "^2.2.0",
+    "gatsby-plugin-netlify-cms": "^4.3.11",
     "gatsby-plugin-postcss": "^2.1.0",
     "gatsby-plugin-purgecss": "^4.0.0",
     "gatsby-plugin-react-helmet": "^3.1.0",
@@ -15,6 +16,7 @@
     "gatsby-source-filesystem": "^2.3.13",
     "gatsby-transformer-remark": "^2.8.18",
     "graphql": "^14.3.1",
+    "netlify-cms-app": "^2.12.18",
     "prop-types": "^15.7.2",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
