adjust configs, remove test posts

--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -9,8 +9,8 @@ media_folder: static/img
 public_folder: /img
 
 collections:
-  - name: "blog"
-    label: "Blog"
+  - name: "posts"
+    label: "Posts"
     folder: "content/blog"
     create: true
     slug: "index"
@@ -18,7 +18,8 @@ collections:
     public_folder: ""
     path: "{{title}}/index"
     fields:
-      - { label: "Title", name: "title", widget: "string" }
-      - { label: "Publish Date", name: "date", widget: "datetime" }
-      - { label: "Description", name: "description", widget: "string" }
-      - { label: "Body", name: "body", widget: "markdown" }
+      - { label: "Title", name: "title", widget: "string", required: true }
+      - { label: "Publish Date", name: "date", widget: "datetime", required: true }
+      - { label: "Slug", name: "slug", widget: "string", required: true }
+      - { label: "Author", name: "author", widget: "string", required: true }
+      - { label: "Body", name: "body", widget: "markdown", required: true }
