--- a/package.json
+++ b/package.json
@@ -10,17 +10,17 @@
     "gatsby-plugin-manifest": "^2.2.0",
     "gatsby-plugin-netlify-cms": "^4.3.11",
     "gatsby-plugin-postcss": "^2.1.0",
-    "gatsby-plugin-purgecss": "^4.0.0",
+    "gatsby-plugin-purgecss": "5.0.0",
     "gatsby-plugin-react-helmet": "^3.1.0",
     "gatsby-remark-classes": "^1.0.0",
     "gatsby-source-filesystem": "^2.3.13",
     "gatsby-transformer-remark": "^2.8.18",
-    "graphql": "^14.3.1",
+    "graphql": "15.3.0",
     "netlify-cms-app": "^2.12.18",
     "prop-types": "^15.7.2",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
-    "react-helmet": "^5.2.1"
+    "react-helmet": "6.1.0"
   },
   "keywords": [],
   "license": "MIT",
@@ -48,13 +48,13 @@
     "@storybook/react": "^5.3.13",
     "babel-eslint": "^10.0.2",
     "babel-loader": "^8.0.6",
-    "eslint": "^6.0.0",
-    "eslint-config-react-app": "^4.0.1",
-    "eslint-plugin-flowtype": "^3.11.1",
+    "eslint": "7.5.0",
+    "eslint-config-react-app": "5.2.1",
+    "eslint-plugin-flowtype": "5.2.0",
     "eslint-plugin-import": "^2.17.3",
     "eslint-plugin-jsx-a11y": "^6.2.1",
     "eslint-plugin-react": "^7.14.1",
-    "prettier": "^1.18.2",
+    "prettier": "2.0.5",
     "tailwindcss": "^1.0.4"
   },
   "repository": {
