--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -5,8 +5,7 @@ backend:
   auth_type: implicit
   app_id: qQdGSV3ZJUkxmbWYtm
 
-media_folder: static/img
-public_folder: /img
+media_folder: "static/images/uploads"
 
 collections:
   - name: "posts"
@@ -22,4 +21,7 @@ collections:
       - { label: "Publish Date", name: "date", widget: "datetime", required: true }
       - { label: "Slug", name: "slug", widget: "string", required: true }
       - { label: "Author", name: "author", widget: "string", required: true }
+      - { label: "Keywords", name: "keywords", widget: "string", required: false }
+      - { label: "Description", name: "description", widget: "string", required: false }
+      - { label: "Image", name: "image", widget: "image", required: false}
       - { label: "Body", name: "body", widget: "markdown", required: true }
