--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -21,7 +21,6 @@ collections:
       - { label: "Publish Date", name: "date", widget: "datetime", required: true }
       - { label: "Slug", name: "slug", widget: "string", required: true }
       - { label: "Author", name: "author", widget: "string", required: true }
-      - { label: "Keywords", name: "keywords", widget: "string", required: false }
-      - { label: "Description", name: "description", widget: "string", required: false }
+      - { label: "Keywords", name: "keywords", widget: "string", required: true}
       - { label: "Image", name: "image", widget: "image", required: false}
       - { label: "Body", name: "body", widget: "markdown", required: true }
