--- a/package.json
+++ b/package.json
@@ -12,9 +12,12 @@
     "gatsby-plugin-postcss": "^2.1.0",
     "gatsby-plugin-purgecss": "5.0.0",
     "gatsby-plugin-react-helmet": "^3.1.0",
+    "gatsby-plugin-sharp": "^2.6.31",
     "gatsby-remark-classes": "^1.0.0",
+    "gatsby-remark-images": "^3.3.28",
     "gatsby-source-filesystem": "^2.3.13",
     "gatsby-transformer-remark": "^2.8.18",
+    "gatsby-transformer-sharp": "^2.5.14",
     "graphql": "15.3.0",
     "mixpanel-browser": "^2.38.0",
     "netlify-cms-app": "^2.12.18",
