--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "gatsby": "^2.14.x",
     "gatsby-plugin-facebook-pixel": "^1.0.5",
     "gatsby-plugin-google-analytics": "^2.2.2",
+    "gatsby-plugin-google-marketing-platform": "^0.1.21",
     "gatsby-plugin-manifest": "^2.2.0",
     "gatsby-plugin-netlify-cms": "^4.3.11",
     "gatsby-plugin-postcss": "^2.1.0",
