--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "gatsby-plugin-purgecss": "5.0.0",
     "gatsby-plugin-react-helmet": "^3.1.0",
     "gatsby-plugin-sharp": "^2.6.31",
+    "gatsby-plugin-sitemap": "^2.11.0",
     "gatsby-remark-classes": "^1.0.0",
     "gatsby-remark-images": "^3.3.28",
     "gatsby-source-filesystem": "^2.3.13",
