--- a/package.json
+++ b/package.json
@@ -27,7 +27,8 @@
     "prop-types": "^15.7.2",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
-    "react-helmet": "6.1.0"
+    "react-helmet": "6.1.0",
+    "react-markdown": "^5.0.3"
   },
   "keywords": [],
   "license": "MIT",
